<resources>
    <string name="app_name">GetCab2</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to registration -->
    <string name="account_exists_dialog_msg">Sorry, looks like this account already exists in the system.&#xD;Click anywhere to continue.</string>
    <string name="account_exists_title">Account exists</string>
    <string name="passenger_info_dialog_msg">Sorry, looks like the phone and/or the email you\'ve entered are incorrect, or you did not enter a first name.</string>
    <string name="passenger_info_title">Invalid phone / email, or no first name</string>
    <string name="cabbie_info_dialog_msg">Sorry, looks like the ID and/or credit card number you\'ve entered are incorrect, or you did not enter a last name.</string>
    <string name="cabbie_info_title">Invalid ID / card number, or no last name</string>
    <string name="account_added_dialog_msg">Account successfully added. Welcome!</string>
    <string name="account_added_title">Account added</string>
    <string name="bad_password_dialog_msg">Please choose a better password. It must contain at least eight characters including one lowercase (a-z), one uppercase (A-Z) and one digit (0-9)
    </string>
    <string name="bad_password_title">Bad password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Please enter your e-mail address</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="prompt_registration">New? Click here to register!</string>
    <string name="remember_check">Remember me   </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">We need to know your contacts in order to have email auto-complete!
    </string>

    <!-- More strings related to registration -->
    <string name="general_prompt">Please enter the following details</string>
    <string name="id_prompt">ID</string>
    <string name="fname_prompt">First Name</string>
    <string name="lname_prompt">Last Name</string>
    <string name="email_prompt">E-mail Address</string>
    <string name="phone_prompt">Phone Number</string>
    <string name="card_prompt">Credit Card No.</string>
    <string name="password_prompt">Enter a chosen a password, with at least 8 characters including capital letters and numbers:</string>
    <string name="action_register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="card_number">Card Number</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="id_number">ID NUMBER</string>
    <string name="identity_number">Identity Number</string>
    <string name="FORM">GetTaxi | Form</string>
    <string name="FIREBASE">FIREBASE says Trip</string>
    <string name="BUTTON_CLOSE">CLOSE</string>
    <string name="WRONG_USER_PASSWORD">WRONG EMAIL OR PASSWORD</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="claim">Start Trip</string>
    <string name="unclaim">End Trip</string>
    <string name="logout">Logout</string>
    <string name="open_travels">Open Travels</string>
    <string name="claimed">You have successfully claimed and started this trip! Go to "My Trips" and click on "End Trip" when the trip is over</string>
    <string name="unclaimed">You have successfully concluded this trip!</string>
    <string name="logout_message">Goodbye!</string>
</resources>
