<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_font"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row-1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/foreground_font" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/phone"
                android:inputType="text"
                android:textColor="@color/foreground_font" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row-2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/origin"
                android:inputType="text"
                android:textColor="@color/foreground_font" />

            <EditText
                android:id="@+id/target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/destination"
                android:inputType="text"
                android:textColor="@color/foreground_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row-3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/origin"
                android:inputType="text"
                android:textColor="@color/foreground_font" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/unclaim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/unclaim"
                android:textAllCaps="false"
                android:textColor="@android:color/white">

            </Button>

            <Button
                android:id="@+id/claim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:text="@string/claim"
                android:textAllCaps="false"
                android:textColor="@android:color/white">

            </Button>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
