<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cabs_wallpaper"
    tools:context=".controller.activities.Register">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/generalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_font_color"
                android:gravity="center_horizontal"
                android:text="@string/general_prompt"
                android:textColor="@color/foreground_font"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps" />

            <LinearLayout
                android:id="@+id/idLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_font"
                    android:text="@string/id_prompt"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/idInput"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/input_background_font"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fnamelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fnameText"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_font"
                    android:text="@string/fname_prompt"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/fnameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/input_background_font"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lnameText"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_font"
                    android:text="@string/lname_prompt"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/lnameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/input_background_font"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_font"
                    android:text="@string/email_prompt"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/input_background_font"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_font"
                    android:text="@string/phone_prompt"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/phoneInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/input_background_font"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cardText"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_font"
                    android:text="@string/card_prompt"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/cardInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/input_background_font"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="@color/foreground_font"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/background_font"
                android:text="@string/password_prompt"
                android:textColor="@color/foreground_font"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@color/input_background_font"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/foreground_font"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:onClick="btnRegisterClick"
                android:text="@string/action_register"
                android:textAllCaps="false"
                android:textColor="@color/button_font_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>